fixed icon spacing with css, fixed li delete issue

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -64,7 +64,7 @@ li {
   border-bottom: 1px dotted #666;
 
   i {
-    margin-right: 1rem;
+    margin: 0 1rem;
     color: $primary-color;
 
     &:hover {
